--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -16,3 +16,14 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0px; 
   padding: 0px; 
 }
+
+body {
+  background: image_url('fresh_snow');
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+
+}
+
+.navbar {
+  background: image_url('food');
+  box-shadow: 0px 1px 3px #2a2a2a;;
+}
