--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,7 +1,10 @@
-<%= @places.each do |place| %>
-	<div class="booyah-box col-10 offset-1">
-		<h1><%= place.name %></h1>
-		<i><%= place.address %></i><br />
-		<p><%= place.description %></p><br />
-	</div>
-<% end %>
+
+
+	<div class="style_paginate">
+    <div class="page_info">
+      <%= page_entries_info @places %>
+    </div>
+    <%= will_paginate @places, :container => false %>
+  </div>
+  <br />
+  <br />
