--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -18,12 +18,49 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background: image_url('fresh_snow');
+  background: image_url('body-bg');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 
 }
 
 .navbar {
-  background: image_url('food');
+  background: image_url('nav-bg');
   box-shadow: 0px 1px 3px #2a2a2a;;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #E3E85A; 
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: 600;
+  letter-spacing: -0.3px;
+}
+
+.style_paginate {
+  text-align: center;
+  padding: 0.3em;
+  cursor: default; }
+  .style_paginate a, .style_paginate span, .style_paginate em {
+    padding: 0.2em 0.5em; }
+  .style_paginate .disabled {
+    color: #aaaaaa; }
+  .style_paginate .current {
+    font-style: normal;
+    font-weight: bold;
+    color: #ff0084; }
+  .style_paginate a {
+    border: 1px solid #dddddd;
+    color: #0063dc;
+    text-decoration: none; }
+    .style_paginate a:hover, .style_paginate a:focus {
+      border-color: #003366;
+      background: #0063dc;
+      color: white; }
+  .style_paginate .page_info {
+    color: #aaaaaa;
+    padding-top: 0.8em; }
+  .style_paginate .previous_page, .style_paginate .next_page {
+    border-width: 2px; }
+  .style_paginate .previous_page {
+    margin-right: 1em; }
+  .style_paginate .next_page {
+    margin-left: 1em; }
