added edit form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,9 @@
-<h2>Sign up</h2>
+<br />
+<br />
+<br />
+<div class="booyah-box col-3 offset-4">
+
+<h2>Sign up</h2><br />
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -16,10 +21,12 @@
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
   </div>
-
+  <br />
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, 'Sign up', class: 'btn btn-primary' %>
   </div>
 <% end %>
-
+<br />
 <%= render "devise/shared/links" %>
+
+</div>
