--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,10 @@
-<h2>Change your password</h2>
+<br />
+<br />
+<br />
+<div class="booyah-box col-3 offset-4">
 
+<h2>Change your password</h2>
+<br />
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
@@ -15,10 +20,13 @@
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
   </div>
-
+<br />
   <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
+    <%= f.button :submit, 'Change my password', class: 'btn btn-primary' %>
   </div>
 <% end %>
+<br />
 
 <%= render "devise/shared/links" %>
+
+</div>
