--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -6,4 +6,4 @@
 	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
 </div>
 <p><%= @place.description %></p>
-</div>>
+</div>
