--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,6 +4,7 @@
 <br /><br />
 <div class='float-right'>
 	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+	<%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
 </div>
 <p><%= @place.description %></p>
 </div>
