--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,12 +1,45 @@
-<div class='booyah-box col-10 offset-1'>
-<h1><%= @place.name %></h1>
-<i><%= @place.address %></i>
-<br /><br />
-<div class='float-right'>
-	<% if current_user && current_user == @place.user %>
-	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-	<%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
-	<% end %>
+<% if @place.latitude.present? && @place.longitude.present? %>
+
+<div class="booyah-box col-10 offset-1">
+  <h1><%= @place.name %></h1>
+  <i><%= @place.address %></i>
+  <br/><br/>
+  <p><%= @place.description %></p>
+
+  <body>
+  <div id="map"></div>
+  <script>
+
+    function initMap() {
+       var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 12,
+        center: myLatLng
+      });
+
+      var marker = new google.maps.Marker({
+        position: myLatLng,
+        map: map,
+        title: 'Hello World!'
+      });
+    }
+  </script>
+
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDcmCztdasetNYVZjwTP0ZDbMR-S30FkU&callback=initMap">
+  </script>
+
+  <div id="map"></div>
+
+  <br />
+
+    <div class="float-right">
+    <% if current_user && current_user == @place.user %>
+      <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+      <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
+    <% end %>
+  </div>
 </div>
-<p><%= @place.description %></p>
-</div>
+
+<% end %>
