--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,4 +42,12 @@
   </div>
 </div>
 
+<div class="clear"></div>
+<%= simple_form_for @comment, url: '#' do |f| %>
+<%= f.input :rating %>
+<%= f.input :message %>
+<%= f.submit 'Add Comment' %>
+<% end %>
+
+
 <% end %>
