--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -43,7 +43,7 @@
 </div>
 
 <div class="clear"></div>
-<%= simple_form_for @comment, url: '#' do |f| %>
+<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
 <%= f.input :rating %>
 <%= f.input :message %>
 <%= f.submit 'Add Comment' %>
