--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -49,5 +49,17 @@
 <%= f.submit 'Add Comment' %>
 <% end %>
 
-
 <% end %>
+
+<h1>Comments</h1>
+
+<% @place.comments.each do |comment| %>
+  <div>
+    <blockquote>
+      <b><%= comment.rating %></b> -
+        <%= comment.message %>
+      <small><%= comment.user.email %></small>
+    </blockquote>
+  </div>
+
+  <% end %>
