--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,65 +1,68 @@
 <% if @place.latitude.present? && @place.longitude.present? %>
 
-<div class="booyah-box col-10 offset-1">
-  <h1><%= @place.name %></h1>
-  <i><%= @place.address %></i>
-  <br/><br/>
-  <p><%= @place.description %></p>
+  <div class="booyah-box col-10 offset-1">
+    <h1><%= @place.name %></h1>
+    <i><%= @place.address %></i>
+    <br/><br/>
+    <p><%= @place.description %></p>
 
-  <body>
-  <div id="map"></div>
-  <script>
+      <div class="float-right">
+        <% if current_user && current_user == @place.user %>
+          <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+          <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
+        <% end %>
+      </div>
 
-    function initMap() {
-       var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+      <br /><br />
 
-      var map = new google.maps.Map(document.getElementById('map'), {
+      <div id="map"></div>
+        <script>
+        function initMap() {
+        var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+        var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 12,
         center: myLatLng
-      });
+        });
 
-      var marker = new google.maps.Marker({
+        var marker = new google.maps.Marker({
         position: myLatLng,
         map: map,
         title: 'Hello World!'
-      });
-    }
-  </script>
+         });
+        }
+        </script>
 
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDcmCztdasetNYVZjwTP0ZDbMR-S30FkU&callback=initMap">
-  </script>
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDcmCztdasetNYVZjwTP0ZDbMR-S30FkU&callback=initMap">
+        </script>
 
-  <div id="map"></div>
+        <div class="clear"></div>
 
-  <br />
+        <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+          <%= f.input :message %>
+          <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
 
-    <div class="float-right">
-    <% if current_user && current_user == @place.user %>
-      <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-      <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
-    <% end %>
-  </div>
-</div>
+          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+        <% end %>
 
-<div class="clear"></div>
-<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-<%= f.input :rating %>
-<%= f.input :message %>
-<%= f.submit 'Add Comment' %>
-<% end %>
+        <div class="clear"></div>
 
-<% end %>
+        <h1>Comments</h1>
 
-<h1>Comments</h1>
+        <% @place.comments.each do |comment| %>
+        
+        <div>
+        <blockquote>
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+          <% end %>
+          <%= comment.message %>
+          <small><%= comment.user.email %></small>
+        </blockquote>
+        </div>
+        <% end %>
 
-<% @place.comments.each do |comment| %>
-  <div>
-    <blockquote>
-      <b><%= comment.rating %></b> -
-        <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
   </div>
 
-  <% end %>
+<% end %>
