--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,16 +39,46 @@
 
         <div class="clear"></div>
 
+        <br />
+
+        <div class="clear"></div>
+
+        <div class="float-right">
+          <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Add a Comment
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+      </div>
+      <div class="modal-body">
+        
         <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
           <%= f.input :message %>
           <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
 
-          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
         <% end %>
-
-        <div class="clear"></div>
+      </div>
+    </div>
+  </div>
+</div>
+        </div>
 
         <h1>Comments</h1>
+
+        
 
         <% @place.comments.each do |comment| %>
         
@@ -66,3 +96,4 @@
   </div>
 
 <% end %>
+
