--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -76,13 +76,13 @@
 </div>
         </div>
 
-        <h1>Comments</h1>
+        <h1 class="float-left">Comments</h1>
 
-        
-
+        <div class="clear"></div>
+        <div class="row">
         <% @place.comments.each do |comment| %>
-        
-        <div>
+
+        <div class="col-12 col-sm-6">
         <blockquote>
         <% if comment.humanized_rating.present? %>
           <b><%= comment.humanized_rating %></b> -
@@ -91,8 +91,9 @@
           <small><%= comment.user.email %></small>
         </blockquote>
         </div>
-        <% end %>
 
+        <% end %>
+      </div>
   </div>
 
 <% end %>
