added image to index plage

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -101,3 +101,9 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+
+.img {
+ width: 320px; 
+ margin-left: auto;
+ margin-right: auto; 
+}
