--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,10 @@
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
+
+    <div class="float-right">
+     <%= image_tag place.photos.last.picture.url, :class => "img" %>
+    </div>
+
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
     <p><%= place.description %></p><br />
