--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,6 +8,38 @@
 
       <div class="float-right">
         <% if current_user && current_user == @place.user %>
+
+          <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+              Add a Photo
+            </button>
+
+          <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add a Photo</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                  <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+                    <div>
+                      <%= f.input :picture %>
+                      <%= f.input :caption %>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <%= f.submit "Add Photos", class: 'btn btn-primary' %>
+                  </div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+
           <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
           <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
         <% end %>
@@ -44,36 +76,36 @@
         <div class="clear"></div>
 
         <div class="float-right">
+
           <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a Comment
-</button>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentmodal">
+            Add a Comment
+          </button>
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
-      </div>
-      <div class="modal-body">
-        
-        <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-          <%= f.input :message %>
-          <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+          <!-- Modal -->
+          <div class="modal fade" id="commentmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Add a commnet</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+                <div class="modal-body">
+                  <%= f.input :message %>
+                  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+                </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
         </div>
 
         <h1 class="float-left">Comments</h1>
@@ -97,19 +129,4 @@
   </div>
 
 <% end %>
-
-<div>
-<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-  <%= f.input :picture %>
-  <%= f.input :caption %>
-  <%= f.submit "Create", class: 'btn btn-primary' %>
-<% end %>
-</div>
-
-<div>
-<% @place.photos.each do |photo| %>
-  <%= image_tag photo.picture.url %>
-  <%= photo.caption %>
-<% end %>
-</div>
 
