--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,10 +1,11 @@
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
-
+    
+    <% if place.photos.last.present? %>
     <div class="float-right">
      <%= image_tag place.photos.last.picture.url, :class => "img" %>
     </div>
-
+    <% end %>
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
     <p><%= place.description %></p><br />
