--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -34,6 +34,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-weight: 600;
   letter-spacing: -0.3px;
+  margin-bottom: 0; 
 }
 
 .style_paginate {
@@ -106,4 +107,30 @@ blockquote p {
  width: 320px; 
  margin-left: auto;
  margin-right: auto; 
+}
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  max-height: 550px; 
+  width: 100%;  
+}
+
+.carousel-item.active, 
+.carousel-item-next, 
+.carousel-item-prev {
+  display: block;
+  }
+
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
