--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,3 +1,31 @@
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+    <%= image_tag 'slider1', class: 'd-black img-fluid' %>
+        <div class="carousel-caption d-none d-md-block">
+        <h3>Great pizza, isn't hear to find</h3>
+        </div>
+    </div>
+    <div class="carousel-item">
+    <%= image_tag 'slider2', class: 'd-block img-fluid' %>
+      <div class="carousel-caption d-none d-md-block">
+      <h3>Breakfast 24/7!</h3>
+      </div>
+    </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
     
