--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,5 @@
 <br />
-<br />
-<br />
-<div class="booyah-box col-3 offset-4">
+<div class="booyah-box col-12">
 
 <h2>Forgot your password?</h2>
 <br />
