added .jpeg to file names in index.html.erb

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,13 +5,13 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-    <%= image_tag 'slider1', class: 'd-black img-fluid' %>
+    <%= image_tag 'slider1.jpeg', class: 'd-black img-fluid' %>
         <div class="carousel-caption d-none d-md-block">
         <h3>Great pizza, isn't hear to find</h3>
         </div>
     </div>
     <div class="carousel-item">
-    <%= image_tag 'slider2', class: 'd-block img-fluid' %>
+    <%= image_tag 'slider2.jpeg', class: 'd-block img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
       <h3>Breakfast 24/7!</h3>
       </div>
@@ -58,7 +58,7 @@
   </div>
 <% end %>
 
-	<div class="style_paginate">
+  <div class="style_paginate">
     <div class="page_info">
       <%= page_entries_info @places %>
     </div>
